# flood-mapping-pipeline

./: .gitignore  DATA_NOTE.md  README.md  analogue_search_results.json  pyproject.toml
presentation/: Final_Presentation.pptx
results/: benchmark_results.csv
scripts/: benchmark_chunking.py  build_stac.py  downstream_analysis.py  plot_mosaic_all30.py  serve_stac.py  step3_build_analogue_zarr.py  step4_build_satellite_zarr.py  step5_build_predictions_zarr.py  step6_data_merge.py
stac/: catalog.json
stac/flood-mapping-pipeline/: collection.json
stac/flood-mapping-pipeline/analogue-results/: analogue-results.json
stac/flood-mapping-pipeline/flood-extent-merged/: flood-extent-merged.json
stac/flood-mapping-pipeline/flood-predictions/: flood-predictions.json
stac/flood-mapping-pipeline/satellite-images/: satellite-images.json
