[project]
name = "flood-mapping-pipeline"
version = "1.0.0"
description = "End-to-end flood mapping pipeline using EDL segmentation, analogue search, and zarr cloud-native storage"
requires-python = ">=3.13"
dependencies = [
    "xarray>=2026.4.0",
    "zarr>=3.1.6",
    "rasterio>=1.5.0",
    "numpy>=2.4.4",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "rioxarray>=0.22.0",
    "pystac>=1.14.3",
    "pandas>=3.0.2",
    "shapely>=2.1.2",
    "pyproj>=3.7.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[tool.uv]
python = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
